--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
